--- a/virtual_coach_app_frontend/render.yaml
+++ b/virtual_coach_app_frontend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: virtual-coach-app
     runtime: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --legacy-peer-deps && npm run build
     startCommand: npm run preview -- --host 0.0.0.0 --port $PORT
     envVars:
       - key: NODE_VERSION
