--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,8 +11,18 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "vitest/globals"
     ],
+    
+    /* 嚴格模式設定 (Strict Mode Settings) */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    
+    /* 模組解析設定 (Module Resolution Settings) */
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
