Core features completed

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,6 +2,9 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
+# Gemini AI Configuration (for workout generation)
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
 # Application URL for Email Verification
 # 在生產環境部署時，郵件驗證連結將使用此 URL
 VITE_APP_URL=https://virtual-coach.onrender.com
