--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,6 +3,16 @@ VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Gemini AI Configuration (for workout generation)
+# 
+# 安全模式（推薦）: 使用 Supabase Edge Function 代理
+# - 設置 VITE_USE_EDGE_FUNCTION=true（或留空，預設為 true）
+# - Edge Function 部署後，GEMINI_API_KEY 設置在 Supabase 後台的 secrets
+#
+# 開發模式（不安全）: 直接呼叫 Gemini API
+# - 設置 VITE_USE_EDGE_FUNCTION=false
+# - 需設置 VITE_GEMINI_API_KEY（警告：API Key 會暴露在瀏覽器網路請求中）
+#
+VITE_USE_EDGE_FUNCTION=true
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Application URL for Email Verification
